--- a/nginx-letsencrypt/data/nginx/app.conf
+++ b/nginx-letsencrypt/data/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name california.home;
+    server_name prashantsolanki.com;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -14,16 +14,16 @@ server {
 
 server {
     listen 443 ssl;
-    server_name california.home;
+    server_name prashantsolanki.com;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/california.home/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/california.home/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/prashantsolanki.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/prashantsolanki.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://california.home;
+        proxy_pass  http://prashantsolanki.com;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
