--- a/swag/docker-compose.yml
+++ b/swag/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - URL=prashantsolanki.com
       - SUBDOMAINS=www, california,
       - VALIDATION=http
+      - DOCKER_MODS=linuxserver/mods:swag-ffmpeg|linuxserver/mods:swag-imagemagick|linuxserver/mods:universal-apprise
       # - CERTPROVIDER= #optional
       # - DNSPLUGIN=cloudflare #optional
       # - PROPAGATION= #optional
