--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -1,25 +1,15 @@
-version: '2.1'
+version: "2.1"
 services:
   plex:
+    image: ghcr.io/linuxserver/plex
     container_name: plex
-    image: plexinc/pms-docker
-    restart: unless-stopped
-    ports:
-      - 32400:32400/tcp
-      - 3005:3005/tcp
-      - 8324:8324/tcp
-      - 32469:32469/tcp
-      - 1900:1900/udp
-      - 32410:32410/udp
-      - 32412:32412/udp
-      - 32413:32413/udp
-      - 32414:32414/udp
+    network_mode: host
     environment:
-      - TZ=Australia/Melbourne
+      - PUID=2000
+      - PGID=2000
+      - VERSION=docker
       - PLEX_CLAIM=claim-n3RsL21ZA4BURes3AKuP
-      - ADVERTISE_IP=http://172.16.1.200:32400/
-    hostname: plex.california.home
     volumes:
       - ./config:/config
-      - ./transcode/temp:/transcode
-      - /data/media:/data
+      - /data/media:/data/media
+    restart: unless-stopped
