Docker compose port change

--- a/swag/docker-compose.yml
+++ b/swag/docker-compose.yml
@@ -25,8 +25,8 @@ services:
     volumes:
       - ./data/config:/config
     ports:
-      - 443:443
-      - 80:80 #optional
+      - "443:443"
+      - "80:80" #optional
     restart: unless-stopped
   # authelia:
   #   image: authelia/authelia:4.21.0
