--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,7 @@ services:
     extends:
       file: ./plex/docker-compose.yml
       service: plex
-  
+  nextcloud:
+    extends:
+      file: ./nextcloud/docker-compose.yml
+      service: nextcloud
