--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - PUID=1003
       - PGID=1003
       - TZ=Australia/Melbourne
-    volumes:
-      - /data/config/nextcloud/config:/config
+    volum
+      - /data/gv0/config/nextcloud/config:/config
       - /data/gv0/media:/data/media
       - /data/gv0/documents:/data/documents
       - /data/gv0/nextcloud:/data/db
