Added env file Added Firefly and Spectre Importer

--- a/calibre-web/docker-compose.yml
+++ b/calibre-web/docker-compose.yml
@@ -4,12 +4,12 @@ services:
     image: ghcr.io/linuxserver/calibre-web
     container_name: calibre-web
     environment:
-      - PUID=1003
-      - PGID=1003
-      - TZ=Australia/Melbourne
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
     volumes:
-      - /data/gv0/config/calibre-web/config:/config
-      - /data/gv0/books:/books
+      - ${VOL_CONFIG}/calibre-web/config:/config
+      - ${VOL_BOOKS}:/books
     ports:
-      - 8083:8083
-    restart: unless-stopped
+      - ${CALIBRE_WEB_PORT_8083}:8083
+    restart: ${RESTART_POLICY}
