--- a/radarr/docker-compose.yml
+++ b/radarr/docker-compose.yml
@@ -4,14 +4,14 @@ services:
     image: ghcr.io/linuxserver/radarr
     container_name: radarr
     environment:
-      - PUID=1003
-      - PGID=1003
-      - TZ=Australia/Melbourne
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
     volumes:
-      - /data/gv0/config/radarr/config:/config
-      - /data/gv0/media/hd/movies:/hd
-      - /data/gv0/media/uhd/movies:/uhd
-      - /data/gv0/downloads:/downloads
+      - ${VOL_CONFIG}/radarr/config:/config
+      - ${VOL_MEDIA}/hd/movies:/hd
+      - ${VOL_MEDIA}/uhd/movies:/uhd
+      - ${VOL_DOWNLOADS}:/downloads
     ports:
-      - 7878:7878
-    restart: unless-stopped
+      - ${RADARR_PORT_7878}:7878
+    restart: ${RESTART_POLICY}
