--- a/tautulli/docker-compose.yml
+++ b/tautulli/docker-compose.yml
@@ -4,11 +4,11 @@ services:
     image: ghcr.io/linuxserver/tautulli
     container_name: tautulli
     environment:
-      - PUID=1003
-      - PGID=1003
-      - TZ=Australia/Melbourne
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
     volumes:
-      - /data/gv0/config/plex/config:/config
+      - ${VOL_CONFIG}/plex/config:/config
     ports:
-      - 8181:8181
-    restart: unless-stopped
+      - ${TAUTULLI_PORT_8181}:8181
+    restart: ${RESTART_POLICY}
