--- a/bazarr/docker-compose.yml
+++ b/bazarr/docker-compose.yml
@@ -4,13 +4,13 @@ services:
     image: ghcr.io/linuxserver/bazarr
     container_name: bazarr
     environment:
-      - PUID=1003
-      - PGID=1003
-      - TZ=Australia/Melbourne
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
     volumes:
-      - /data/gv0/config/bazarr/config:/config
-      - /data/gv0/media/hd:/hd
-      - /data/gv0/media/uhd:/uhd
+      - ${VOL_CONFIG}/bazarr/config:/config
+      - ${VOL_MEDIA}/hd:/hd
+      - ${VOL_MEDIA}/uhd:/uhd
     ports:
-      - 6767:6767
-    restart: unless-stopped
+      - ${BAZARR_PORT_6767}:6767
+    restart: ${RESTART_POLICY}
