--- a/db-server.yml
+++ b/db-server.yml
@@ -4,14 +4,35 @@ services:
     extends:
       file: ./mariadb/docker-compose.yml
       service: mariadb
+    env_file: 
+      - ./.env
   webtop:
     extends:
       file: ./webtop/docker-compose.yml
       service: webtop
+    env_file: 
+      - ./.env
   wikijs:
     extends:
       file: ./wikijs/docker-compose.yml
       service: wikijs
+    env_file: 
+      - ./.env
   code-server:
-    extends: ./code-server/docker-compose.yml
-    service: code-server
+    extends: 
+      file: ./code-server/docker-compose.yml
+      service: code-server
+    env_file: 
+      - ./.env
+  fireflyiii:
+    extends: 
+      file: ./fireflyiii/docker-compose.yml
+      service: fireflyiii
+    env_file: 
+      - ./fireflyiii.env
+  spectreimporter:
+    extends: 
+      file: ./spectreimporter/docker-compose.yml
+      service: spectreimporter
+    env_file: 
+      - ./.env    
