--- a/jackett/docker-compose.yml
+++ b/jackett/docker-compose.yml
@@ -4,14 +4,14 @@ services:
     image: ghcr.io/linuxserver/jackett
     container_name: jackett
     environment:
-      - PUID=1003
-      - PGID=1003
-      - TZ=Australia/Melbourne
-      - AUTO_UPDATE=true #optional
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
+      - AUTO_UPDATE=${JACKETT_AUTO_UPDATE} #optional
       # - RUN_OPTS=<run options here> #optional
     volumes:
-      - /data/gv0/config/plex/config:/config
-      - /data/gv0/downloads:/downloads
+      - ${VOL_CONFIG}/jackett/config:/config
+      - ${VOL_DOWNLOADS}:/downloads
     ports:
-      - 9117:9117
-    restart: unless-stopped
+      - ${JACKETT_PORT_9117}:9117
+    restart: ${RESTART_POLICY}
