--- a/lidarr/docker-compose.yml
+++ b/lidarr/docker-compose.yml
@@ -1,16 +1,16 @@
-version: "2.1"
+version: "3"
 services:
   lidarr:
     image: ghcr.io/linuxserver/lidarr
     container_name: lidarr
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Australia/Melbourne
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
     volumes:
-      - /data/gv0/config/lidarr/config:/config
-      - /data/gv0/media/music:/music
-      - /data/gv0/downloads/music:/downloads
+      - ${VOL_CONFIG}/lidarr/config:/config
+      - ${VOL_MEDIA}/music:/music
+      - ${VOL_DOWNLOADS}/music:/downloads
     ports:
-      - 8686:8686
-    restart: unless-stopped
+      - ${Lidarr_PORT_8686}:8686
+    restart: ${RESTART_POLICY}
