--- a/overseerr/docker-compose.yml
+++ b/overseerr/docker-compose.yml
@@ -4,11 +4,10 @@ services:
     image: ghcr.io/linuxserver/overseerr
     container_name: overseerr
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Australia/Melbourne
-    volumes:
-      - /data/gv0/config/overseerr/config:/config
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
+    volumes: - ${VOL_CONFIG}/overseerr/config:/config
     ports:
-      - 5055:5055
-    restart: unless-stopped
+      - ${OVERSEERR_PORT_5055}:5055
+    restart: ${RESTART_POLICY}
