--- a/qbittorrent/docker-compose.yml
+++ b/qbittorrent/docker-compose.yml
@@ -4,15 +4,15 @@ services:
     image: ghcr.io/linuxserver/qbittorrent
     container_name: qbittorrent
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Europe/London
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
       - WEBUI_PORT=8080
     volumes:
-      - /data/gv0/config/qbittorrent/config:/config
-      - /data/gv0/downloads:/downloads
+      - ${VOL_CONFIG}/qbittorrent/config:/config
+      - ${VOL_DOWNLOADS}:/downloads
     ports:
-      - 6881:6881
-      - 6881:6881/udp
-      - 8080:8080
-    restart: unless-stopped
+      - ${QBITTORRENT_PORT_6881}:6881
+      - ${QBITTORRENT_PORT_6881}:6881/udp
+      - ${QBITTORRENT_PORT_8080}:8080
+    restart: ${RESTART_POLICY}
