--- a/sonarr/docker-compose.yml
+++ b/sonarr/docker-compose.yml
@@ -4,14 +4,14 @@ services:
     image: ghcr.io/linuxserver/sonarr
     container_name: sonarr
     environment:
-      - PUID=1003
-      - PGID=1003
-      - TZ=Australia/Melbourne
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
     volumes:
-      - /data/gv0/config/sonarr/config:/config
-      - /data/gv0/media/hd/tv:/hd
-      - /data/gv0/media/uhd/tv:/uhd
-      - /data/gv0/media/downloads:/downloads
+      - ${VOL_CONFIG}/sonarr/config:/config
+      - ${VOL_MEDIA}/hd/tv:/hd
+      - ${VOL_MEDIA}/uhd/tv:/uhd
+      - ${VOL_DOWNLOADS}:/downloads
     ports:
-      - 8989:8989
-    restart: unless-stopped
+      - ${SONARR_PORT_8989}:8989
+    restart: ${RESTART_POLICY}
