--- a/wireshark/docker-compose.yml
+++ b/wireshark/docker-compose.yml
@@ -7,11 +7,10 @@ services:
       - NET_ADMIN
     network_mode: host
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Australia/Melbourne
-    volumes:
-      - /data/gv0/config/wireshark/config:/config
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
+    volumes: - ${VOL_CONFIG}/wireshark/config:/config
     ports:
-      - 3000:3000 #optional
-    restart: unless-stopped
+      - ${WIRESHARK_PORT_3000}:3000 #optional
+    restart: ${RESTART_POLICY}
