--- a/mariadb/docker-compose.yml
+++ b/mariadb/docker-compose.yml
@@ -4,13 +4,13 @@ services:
     image: ghcr.io/linuxserver/mariadb
     container_name: mariadb
     environment:
-      - PUID=1003
-      - PGID=1003
-      - MYSQL_ROOT_PASSWORD=Mar4i8adb
-      - TZ=Australia/Melbourne
-      - MYSQL_DATABASE=nextcloud
-      - MYSQL_USER=ncuser
-      - MYSQL_PASSWORD=Mar4i8adb
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - MYSQL_ROOT_PASSWORD=${MARIADB_MYSQL_ROOT_PASSWORD}
+      - TZ=${TZ}
+      - MYSQL_DATABASE=${MARIADB_MYSQL_DATABASE}
+      - MYSQL_USER=${MARIADB_MYSQL_USER}
+      - MYSQL_PASSWORD=${MARIADB_MYSQL_PASSWORD}
     volumes:
-      - /data/config/mariadb/config:/config
-    restart: unless-stopped
+      - ${VOL_CONFIG}/mariadb/config:/config
+    restart: ${RESTART_POLICY}
