Added env file to firefly service updated todo

--- a/db-server.yml
+++ b/db-server.yml
@@ -30,6 +30,7 @@ services:
       service: fireflyiii
     env_file: 
       - ./fireflyiii.env
+      - ./.env
   spectreimporter:
     extends: 
       file: ./spectreimporter/docker-compose.yml
