--- a/openvpn-as/docker-compose.yml
+++ b/openvpn-as/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - PGID=${PGID}
       - TZ=${TZ}
       - INTERFACE=${OPENVPN_AS_INTERFACE} #optional
-    volumes: - ${VOL_CONFIG}/openvpn-as/config:/config
+    volumes:
+      - ${VOL_CONFIG}/openvpn-as/config:/config
     ports:
       - ${OPENVPN_AS_PORT_943}:943
       - ${OPENVPN_AS_PORT_9443}:9443
