--- a/overseerr/docker-compose.yml
+++ b/overseerr/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=${TZ}
-    volumes: - ${VOL_CONFIG}/overseerr/config:/config
+    volumes:
+      - ${VOL_CONFIG}/overseerr/config:/config
     ports:
       - ${OVERSEERR_PORT_5055}:5055
     restart: ${RESTART_POLICY}
