Home assistant port

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Webtop",
         "Wireshark",
         "bazarr",
+        "homeassistant",
         "jackett",
         "lidarr",
         "mariadb",
