qbit port update

--- a/qbittorrent/docker-compose.yml
+++ b/qbittorrent/docker-compose.yml
@@ -7,12 +7,12 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=${TZ}
-      - WEBUI_PORT=8080
+      - WEBUI_PORT=${QBITTORRENT_PORT_8080}
     volumes:
       - ${VOL_CONFIG}/qbittorrent/config:/config
       - ${VOL_DOWNLOADS}:/downloads
     ports:
       - ${QBITTORRENT_PORT_6881}:6881
       - ${QBITTORRENT_PORT_6881}:6881/udp
-      - ${QBITTORRENT_PORT_8080}:8080
+      - ${QBITTORRENT_PORT_8080}:${QBITTORRENT_PORT_8080}
     restart: ${RESTART_POLICY}
