--- a/ddclient/docker-compose.yml
+++ b/ddclient/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  syncthing:
+  ddclient:
     image: ghcr.io/linuxserver/ddclient
     container_name: ddclient
     hostname: ddclient
