Added user to all services

--- a/bazarr/docker-compose.yml
+++ b/bazarr/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   bazarr:
     image: ghcr.io/linuxserver/bazarr
     container_name: bazarr
+    user: ${USER_NAME}
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
