--- a/calibre/docker-compose.yml
+++ b/calibre/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   calibre:
     image: ghcr.io/linuxserver/calibre
     container_name: calibre
+    user: ${USER_NAME}
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
