--- a/code-server/docker-compose.yml
+++ b/code-server/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   code-server:
     image: ghcr.io/linuxserver/code-server
     container_name: code-server
+    user: ${USER_NAME}
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
