--- a/ddclient/docker-compose.yml
+++ b/ddclient/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: ghcr.io/linuxserver/ddclient
     container_name: ddclient
     hostname: ddclient
+    user: ${USER_NAME}
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
