--- a/homeassistant/docker-compose.yml
+++ b/homeassistant/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: ghcr.io/linuxserver/homeassistant
     container_name: homeassistant
     network_mode: host
+    user: ${USER_NAME}
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
