--- a/mariadb/docker-compose.yml
+++ b/mariadb/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   mariadb:
     image: ghcr.io/linuxserver/mariadb
     container_name: mariadb
+    user: ${USER_NAME}
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
