--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   nextcloud:
     image: ghcr.io/linuxserver/nextcloud
     container_name: nextcloud
+    user: ${USER_NAME}
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
