--- a/overseerr/docker-compose.yml
+++ b/overseerr/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   overseerr:
     image: ghcr.io/linuxserver/overseerr
     container_name: overseerr
+    user: ${USER_NAME}
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
