--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: ghcr.io/linuxserver/plex
     container_name: plex
     network_mode: host
+    user: ${USER_NAME}
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
