--- a/radarr/docker-compose.yml
+++ b/radarr/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   radarr:
     image: ghcr.io/linuxserver/radarr
     container_name: radarr
+    user: ${USER_NAME}
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
