--- a/wireshark/docker-compose.yml
+++ b/wireshark/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     cap_add:
       - NET_ADMIN
     network_mode: host
+    user: ${USER_NAME}
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
