docker glusterfs volume plugin

--- a/web-server.yml
+++ b/web-server.yml
@@ -14,12 +14,13 @@ services:
       - ./.env
     depends_on:
       - ddclient
-  openvpn-as:
-    extends:
-      file: ./openvpn-as/docker-compose.yml
-      service: openvpn-as
-    env_file: 
-      - ./.env
+# Deprecated 
+# openvpn-as:
+  #   extends:
+  #     file: ./openvpn-as/docker-compose.yml
+  #     service: openvpn-as
+  #   env_file: 
+  #     - ./.env
   qbittorrent:
     extends:
       file: ./qbittorrent/docker-compose.yml
