--- a/web-server.yml
+++ b/web-server.yml
@@ -41,7 +41,6 @@ services:
     image: ghcr.io/linuxserver/homeassistant
     container_name: homeassistant
     network_mode: host
-    user: ${USER_NAME}
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
@@ -52,5 +51,16 @@ services:
     # - ${HOMEASSISTANT_PORT_8123}:8123
     # devices:
     #   - /path/to/device:/path/to/device
+    restart: ${RESTART_POLICY}
+  ddclient:
+    image: ghcr.io/linuxserver/ddclient
+    container_name: ddclient
+    hostname: ddclient
+    environment:
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
+    volumes:
+      - ${VOL_CONFIG}/ddclient/config:/config
     restart: ${RESTART_POLICY}
 
