--- a/web-server.yml
+++ b/web-server.yml
@@ -3,6 +3,7 @@ services:
   swag:
     image: ghcr.io/linuxserver/swag
     container_name: swag
+    network_mode: host
     cap_add:
       - NET_ADMIN
     environment:
@@ -16,21 +17,21 @@ services:
       - EMAIL=${SWAG_EMAIL}
     volumes:
       - ${VOL_CONFIG}/swag/config:/config
-    ports:
-      - ${SWAG_PORT_443}:443
-      - ${SWAG_PORT_80}:80 #optional
+    # ports:
+    #   - ${SWAG_PORT_443}:443
+    #   - ${SWAG_PORT_80}:80 #optional
     restart: ${RESTART_POLICY}
-  homeassistant:
-    image: ghcr.io/linuxserver/homeassistant
-    container_name: homeassistant
-    network_mode: host
-    environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TZ}
-    volumes:
-      - ${VOL_CONFIG}/homeassistant/config:/config
-    restart: ${RESTART_POLICY}
+  # homeassistant:
+  #   image: ghcr.io/linuxserver/homeassistant
+  #   container_name: homeassistant
+  #   network_mode: host
+  #   environment:
+  #     - PUID=${PUID}
+  #     - PGID=${PGID}
+  #     - TZ=${TZ}
+  #   volumes:
+  #     - ${VOL_CONFIG}/homeassistant/config:/config
+  #   restart: ${RESTART_POLICY}
   ddclient:
     image: ghcr.io/linuxserver/ddclient
     container_name: ddclient
